[gd_scene load_steps=11 format=3 uid="uid://bydfq20lrga8u"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_d75b4"]
[ext_resource type="Texture2D" uid="uid://bwo83yymfg15k" path="res://Textures/Icons/staff_01d.png" id="2_qj1rv"]
[ext_resource type="Texture2D" uid="uid://c8w8pcgxmln5g" path="res://Textures/Icons/sword_02c.png" id="3_idqe1"]
[ext_resource type="Texture2D" uid="uid://7a4f3lgnp6ny" path="res://Textures/Icons/boots_01a.png" id="3_kvfo0"]
[ext_resource type="Texture2D" uid="uid://bxulv66ta6di" path="res://Textures/Icons/gem_01d.png" id="4_t0ujb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vu3ik"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="LabelSettings" id="LabelSettings_q32nk"]
font_size = 100
font_color = Color(0.556863, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0.275159, 3.15858e-07, 7.21961e-08, 1)
shadow_offset = Vector2(-2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_ayadn"]
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xocui"]
bg_color = Color(0, 0.0941176, 0, 0.627451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqo5w"]
bg_color = Color(0, 0.615686, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_d75b4")

[node name="death_screen" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vu3ik")

[node name="death_label" type="Label" parent="death_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.5
offset_top = -68.5
offset_right = 235.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
text = "YOU DIED"
label_settings = SubResource("LabelSettings_q32nk")

[node name="Button" type="Button" parent="death_screen"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = 69.0
offset_right = 34.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.779291, 0.779291, 0.779291, 1)
action_mode = 0
text = "Restart"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -186.0
offset_top = 30.0
offset_right = -45.9995
offset_bottom = 104.0
grow_horizontal = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="time_label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Time:
"
label_settings = SubResource("LabelSettings_ayadn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="score_label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Score:"
label_settings = SubResource("LabelSettings_ayadn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="highscore_label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Highscore:"
label_settings = SubResource("LabelSettings_ayadn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="time_value" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "00:00
"
label_settings = SubResource("LabelSettings_ayadn")
horizontal_alignment = 2
vertical_alignment = 1

[node name="score_value" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_ayadn")
horizontal_alignment = 2
vertical_alignment = 1

[node name="highscore_value" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_ayadn")
horizontal_alignment = 2
vertical_alignment = 1

[node name="xpbar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -329.0
offset_top = 18.0
offset_right = 329.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xocui")
theme_override_styles/fill = SubResource("StyleBoxFlat_cqo5w")
step = 1.0
show_percentage = false

[node name="xp_label" type="Label" parent="xpbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "0 / 100"

[node name="lvlup_screen" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -224.0
offset_right = 224.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="lvlup_screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="lvlup_screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="attack1" type="Button" parent="lvlup_screen/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 6
text = "SWORD - LVL 0"
icon = ExtResource("3_idqe1")
expand_icon = true

[node name="attack2" type="Button" parent="lvlup_screen/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 6
text = "FIRE STAFF - LVL 0"
icon = ExtResource("2_qj1rv")
expand_icon = true

[node name="heart" type="Button" parent="lvlup_screen/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 6
text = "HEALTH GEM - LVL 0"
icon = ExtResource("4_t0ujb")
expand_icon = true

[node name="boots" type="Button" parent="lvlup_screen/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 6
text = "BOOTS - LVL 0"
icon = ExtResource("3_kvfo0")
expand_icon = true

[connection signal="pressed" from="death_screen/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="lvlup_screen/VBoxContainer/attack1" to="." method="_on_attack_1_pressed"]
[connection signal="pressed" from="lvlup_screen/VBoxContainer/attack2" to="." method="_on_attack_2_pressed"]
[connection signal="pressed" from="lvlup_screen/VBoxContainer/heart" to="." method="_on_heart_pressed"]
[connection signal="pressed" from="lvlup_screen/VBoxContainer/boots" to="." method="_on_boots_pressed"]
